--- a/employeeWeb/src/main/resources/application.properties
+++ b/employeeWeb/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.mvc.contentnegotiation.favor-parameter=true
 
-spring.mvc.view.prefix= WEB-INF/
+spring.mvc.view.prefix= /WEB-INF/
 spring.mvc.view.suffix=.jsp
