--- a/employeeWeb/src/main/resources/application.properties
+++ b/employeeWeb/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+# JSP pages config
 #spring.mvc.contentnegotiation.favor-parameter=true
 #spring.mvc.view.prefix=/WEB-INF/
 #spring.mvc.view.suffix=.jsp
 
 employeeNotPresentMessage=Employee with such id or name is not found
+userNotPresentMessage=User with such id or name is not found
 
 
 #H2
@@ -11,12 +13,12 @@ spring.jpa.hibernate.ddlAuto=create-drop
 spring.jpa.showSql=true
 spring.jpa.defer-datasource-initialization=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
 
 #Extra H2 settings
 #spring.datasource.url=jdbc:h2:mem:testdb
